<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="380dp"
        android:orientation="vertical"
        android:background="@drawable/dialog_background">

        <TextView
            android:text="@string/help_name"
            style="@style/DialogTitle"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
        />

        <TextView
            android:text="@string/help_contents_1"
            style="@style/DialogContents"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"/>

        <TextView
            android:text="@string/help_contents_2"
            style="@style/DialogAccentContents"
            android:layout_marginHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"/>

        <TextView
            android:text="@string/help_contents_3"
            style="@style/DialogContents"
            android:layout_marginHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_dialog_dismiss"
            style="@style/DialogButton"
            android:background="@drawable/basic_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="돌아가기">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>
</layout>