<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="activity"
            type="kr.co.nyangtographer.android.nyangtographer.MainActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_undo"
                style="@style/MenuText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/rounded_corners_50"
                android:drawableLeft="@drawable/ic_undo"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:paddingVertical="2dp"
                android:text="@string/undo_name" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_corners_50"
                android:drawableLeft="@drawable/ic_info"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:paddingVertical="2dp"
                android:text="@string/help_name"
                style="@style/MenuText"/>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/fl_center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:layout_margin="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_talk"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/rounded_corners_50_transp_50"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/explanation_select_stage"
                android:textColor="@color/dark_brown"
                android:textSize="20sp"
                android:fontFamily="@font/nanum_square_round_eb"
                />
            <ImageView
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_explan_cat"/>
        </LinearLayout>
    </LinearLayout>
</layout>
